#
# some news ... see also TODO for hints
#


2019-01-27 -> finalize example based on chapter 1
	      tag "end_of_chapter_01"

2019-01-26 -> some reorganisation
	      add a cpp folder for the next trys
	      add sdl_book to cpp (playground)
	      add some useful links

	      example based on chapter 1

2017-12-10...14 -> do a lot of rework and updates

2017-12-06 -> some smaller adds regarding game_object types

2017-11-26 -> some rework of the init parts
	      add some first parts for new object types

2017-11-05 -> start to implement new libgame based on the stuff i learned from
	      first_try

2017-11-04 -> add skeleton for another object fab which shows the new additional
	      configuration features
	   -> some cleanups
	   -> a complete reorg and start with some more experiments

2017-11-01 -> add some more pixel-art
	      - flask for heal and mana
	      - heart pack

2017-10-19 -> do some rework around the detection functions
	      add some more simple detection functions
	      do some rework regarding setup_main_window

2017-10-18 -> some first step towards simple_tennis

2017-10-17 -> add pixel-objects for simple_tennis example
	      first implementation of the simple_tennis example

2017-10-16 -> some fixes around the joystick fab
	   -> add skeleton for a fist simple game -> simple_tennis (something
	      like pong clone)
	   -> add skeleton for simple ai demo

2017-10-15 -> finalize joystick fab
	   -> add some functions/macros around the joystick fab

2017-10-14 -> add some minor steps towards joystick fab

2017-10-11 -> add next steps towards joystick fab
	   -> fix missing free of joystick array

2017-10-10 -> add first steps for something like joystick fab (similiar to object fab)

2017-10-09 -> add skeleton for object_fab_xml.c which should provide the same parts
	      via libxml (and xml based config-file) like object_fab.c (uses libconfig)

2017-10-08 -> do some renaming for more consistense function names