@@ -3,7 +3,9 @@
 #
 
 CC = g++
-CFLAGS = -Wall -Wextra `pkg-config --cflags sdl2 SDL2_image`
+
+# to add -Weffc++ -Wsign-conversion
+CFLAGS = -Wall -Wextra -std=c++14 `pkg-config --cflags sdl2 SDL2_image`
 LDLIBS = `pkg-config --libs sdl2 SDL2_image `
 
 PROG = sdl_game
