@@ -3,6 +3,8 @@
 #
 
 
+2019-01-31 -> add texture_manager and use it
+
 2019-01-27 -> finalize example based on chapter 1
 	      tag "end_of_chapter_01"
 
